fix hero image, added shadow text for global inpact numbers, fix cards z-index

--- a/assets/scss/components/_story-card.scss
+++ b/assets/scss/components/_story-card.scss
@@ -54,7 +54,7 @@
     &.no-image {
         .content {
             .tag, .title-description {
-                z-index: auto;
+                z-index: $z-index-3;
             }
         }
 
@@ -169,7 +169,7 @@
         }
 
         .tag, .title-description {
-            z-index: -1;
+            z-index: $z-index-0;
         }
 
         .title-description {
@@ -225,6 +225,7 @@
         .cta{
             bottom: 35px;
             position: absolute;
+            z-index: $z-index-3;
 
             .text-link:hover {
                 color: inherit;
@@ -238,6 +239,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
+        z-index: $z-index-1;
         background-color: $yellow;
         transform: translateX(-105%);
         transition: $transition-primary;
